fix contrast issue in emoji picker

--- a/app/javascript/styles/chitter.scss
+++ b/app/javascript/styles/chitter.scss
@@ -1,6 +1,6 @@
 $ui-base-color: #2c162c;
-$ui-primary-color: #dabada;
-$ui-secondary-color: #eae;
+$ui-primary-color: #dad;
+$ui-secondary-color: #fef;
 $ui-highlight-color: #b01ec8;
 
 @import 'chitter-common.scss';
